[gd_scene load_steps=5 format=3 uid="uid://c1wju77r3clhd"]

[ext_resource type="Texture2D" uid="uid://bi10emnb11yu4" path="res://assets/tilemap.png" id="1_014kd"]
[ext_resource type="Script" uid="uid://d014o47235k7p" path="res://scenes/Objects/Level1/level_1.gd" id="1_i67f7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bswci"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33e4k"]
size = Vector2(14, 9)

[node name="Level 1" type="Area2D"]
script = ExtResource("1_i67f7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, -8)
texture = ExtResource("1_014kd")
region_enabled = true
region_rect = Rect2(48, 32, 16, 16)

[node name="Collider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
position = Vector2(8, -5)
shape = SubResource("RectangleShape2D_bswci")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(8, -5.5)
shape = SubResource("RectangleShape2D_33e4k")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
